Analyzer/ANTLR/ArtGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.2 ArtGrammar.g 2015-12-05 01:41:46

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.2")]
//[System.CLSCompliant(false)]
public partial class ArtGrammarParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BEGIN", "BLOCK", "BOOLEAN", "COLON", "COMMA", "COMMENT", "DO", "DOT", "ELSE", "END", "EQUAL", "EXPONENT", "FALSE", "FOR", "GE", "GT", "IDENT", "IDLIST", "IF", "INTEGER", "LCURLY", "LE", "LPAREN", "LT", "MINUS", "NOT", "NOT_EQUAL", "NUMLIST", "NUM_BIN", "NUM_DEC", "NUM_HEX", "NUM_OCT", "NUM_REAL", "OR", "PLUS", "PROGRAM", "RCURLY", "READ", "REAL", "RPAREN", "SEMI", "SLASH", "STAR", "THEN", "TO", "TRUE", "VAR", "VARDECL", "WHILE", "WRITE", "WS"
	};
	public const int EOF=-1;
	public const int AND=4;
	public const int ASSIGN=5;
	public const int BEGIN=6;
	public const int BLOCK=7;
	public const int BOOLEAN=8;
	public const int COLON=9;
	public const int COMMA=10;
	public const int COMMENT=11;
	public const int DO=12;
	public const int DOT=13;
	public const int ELSE=14;
	public const int END=15;
	public const int EQUAL=16;
	public const int EXPONENT=17;
	public const int FALSE=18;
	public const int FOR=19;
	public const int GE=20;
	public const int GT=21;
	public const int IDENT=22;
	public const int IDLIST=23;
	public const int IF=24;
	public const int INTEGER=25;
	public const int LCURLY=26;
	public const int LE=27;
	public const int LPAREN=28;
	public const int LT=29;
	public const int MINUS=30;
	public const int NOT=31;
	public const int NOT_EQUAL=32;
	public const int NUMLIST=33;
	public const int NUM_BIN=34;
	public const int NUM_DEC=35;
	public const int NUM_HEX=36;
	public const int NUM_OCT=37;
	public const int NUM_REAL=38;
	public const int OR=39;
	public const int PLUS=40;
	public const int PROGRAM=41;
	public const int RCURLY=42;
	public const int READ=43;
	public const int REAL=44;
	public const int RPAREN=45;
	public const int SEMI=46;
	public const int SLASH=47;
	public const int STAR=48;
	public const int THEN=49;
	public const int TO=50;
	public const int TRUE=51;
	public const int VAR=52;
	public const int VARDECL=53;
	public const int WHILE=54;
	public const int WRITE=55;
	public const int WS=56;

	public ArtGrammarParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public ArtGrammarParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
        RecognitionExceptions = new List<RecognitionException>();
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

    public List<RecognitionException> RecognitionExceptions { get; private set; }

    public override void ReportError(RecognitionException e)
    {
        RecognitionExceptions.Add(e);
        base.ReportError(e);
    }

	public override string[] TokenNames { get { return ArtGrammarParser.tokenNames; } }
	public override string GrammarFileName { get { return "ArtGrammar.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_num_bin();
	partial void LeaveRule_num_bin();
	// $ANTLR start "num_bin"
	// ArtGrammar.g:73:1: num_bin : NUM_BIN ;
	[GrammarRule("num_bin")]
	private AstParserRuleReturnScope<object, IToken> num_bin()
	{
		EnterRule_num_bin();
		EnterRule("num_bin", 1);
		TraceIn("num_bin", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken NUM_BIN1 = default(IToken);

		object NUM_BIN1_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "num_bin");
		DebugLocation(73, 17);
		try
		{
			// ArtGrammar.g:73:9: ( NUM_BIN )
			DebugEnterAlt(1);
			// ArtGrammar.g:73:11: NUM_BIN
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(73, 11);
			NUM_BIN1=(IToken)Match(input,NUM_BIN,Follow._NUM_BIN_in_num_bin1379); 
			NUM_BIN1_tree = (object)adaptor.Create(NUM_BIN1);
			adaptor.AddChild(root_0, NUM_BIN1_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("num_bin", 1);
			LeaveRule("num_bin", 1);
			LeaveRule_num_bin();
		}
		DebugLocation(73, 17);
		} finally { DebugExitRule(GrammarFileName, "num_bin"); }
		return retval;

	}
	// $ANTLR end "num_bin"

	partial void EnterRule_num_oct();
	partial void LeaveRule_num_oct();
	// $ANTLR start "num_oct"
	// ArtGrammar.g:74:1: num_oct : NUM_OCT ;
	[GrammarRule("num_oct")]
	private AstParserRuleReturnScope<object, IToken> num_oct()
	{
		EnterRule_num_oct();
		EnterRule("num_oct", 2);
		TraceIn("num_oct", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken NUM_OCT2 = default(IToken);

		object NUM_OCT2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "num_oct");
		DebugLocation(74, 17);
		try
		{
			// ArtGrammar.g:74:9: ( NUM_OCT )
			DebugEnterAlt(1);
			// ArtGrammar.g:74:11: NUM_OCT
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(74, 11);
			NUM_OCT2=(IToken)Match(input,NUM_OCT,Follow._NUM_OCT_in_num_oct1386); 
			NUM_OCT2_tree = (object)adaptor.Create(NUM_OCT2);
			adaptor.AddChild(root_0, NUM_OCT2_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("num_oct", 2);
			LeaveRule("num_oct", 2);
			LeaveRule_num_oct();
		}
		DebugLocation(74, 17);
		} finally { DebugExitRule(GrammarFileName, "num_oct"); }
		return retval;

	}
	// $ANTLR end "num_oct"

	partial void EnterRule_num_dec();
	partial void LeaveRule_num_dec();
	// $ANTLR start "num_dec"
	// ArtGrammar.g:75:1: num_dec : NUM_DEC ;
	[GrammarRule("num_dec")]
	private AstParserRuleReturnScope<object, IToken> num_dec()
	{
		EnterRule_num_dec();
		EnterRule("num_dec", 3);
		TraceIn("num_dec", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken NUM_DEC3 = default(IToken);

		object NUM_DEC3_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "num_dec");
		DebugLocation(75, 17);
		try
		{
			// ArtGrammar.g:75:9: ( NUM_DEC )
			DebugEnterAlt(1);
			// ArtGrammar.g:75:11: NUM_DEC
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(75, 11);
			NUM_DEC3=(IToken)Match(input,NUM_DEC,Follow._NUM_DEC_in_num_dec1393); 
			NUM_DEC3_tree = (object)adaptor.Create(NUM_DEC3);
			adaptor.AddChild(root_0, NUM_DEC3_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("num_dec", 3);
			LeaveRule("num_dec", 3);
			LeaveRule_num_dec();
		}
		DebugLocation(75, 17);
		} finally { DebugExitRule(GrammarFileName, "num_dec"); }
		return retval;

	}
	// $ANTLR end "num_dec"

	partial void EnterRule_num_hex();
	partial void LeaveRule_num_hex();
	// $ANTLR start "num_hex"
	// ArtGrammar.g:76:1: num_hex : NUM_HEX ;
	[GrammarRule("num_hex")]
	private AstParserRuleReturnScope<object, IToken> num_hex()
	{
		EnterRule_num_hex();
		EnterRule("num_hex", 4);
		TraceIn("num_hex", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken NUM_HEX4 = default(IToken);

		object NUM_HEX4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "num_hex");
		DebugLocation(76, 17);
		try
		{
			// ArtGrammar.g:76:9: ( NUM_HEX )
			DebugEnterAlt(1);
			// ArtGrammar.g:76:11: NUM_HEX
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(76, 11);
			NUM_HEX4=(IToken)Match(input,NUM_HEX,Follow._NUM_HEX_in_num_hex1400); 
			NUM_HEX4_tree = (object)adaptor.Create(NUM_HEX4);
			adaptor.AddChild(root_0, NUM_HEX4_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("num_hex", 4);
			LeaveRule("num_hex", 4);
			LeaveRule_num_hex();
		}
		DebugLocation(76, 17);
		} finally { DebugExitRule(GrammarFileName, "num_hex"); }
		return retval;

	}
	// $ANTLR end "num_hex"

	partial void EnterRule_num_real();
	partial void LeaveRule_num_real();
	// $ANTLR start "num_real"
	// ArtGrammar.g:77:1: num_real : NUM_REAL ;
	[GrammarRule("num_real")]
	private AstParserRuleReturnScope<object, IToken> num_real()
	{
		EnterRule_num_real();
		EnterRule("num_real", 5);
		TraceIn("num_real", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken NUM_REAL5 = default(IToken);

		object NUM_REAL5_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "num_real");
		DebugLocation(77, 18);
		try
		{
			// ArtGrammar.g:77:9: ( NUM_REAL )
			DebugEnterAlt(1);
			// ArtGrammar.g:77:11: NUM_REAL
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(77, 11);
			NUM_REAL5=(IToken)Match(input,NUM_REAL,Follow._NUM_REAL_in_num_real1406); 
			NUM_REAL5_tree = (object)adaptor.Create(NUM_REAL5);
			adaptor.AddChild(root_0, NUM_REAL5_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("num_real", 5);
			LeaveRule("num_real", 5);
			LeaveRule_num_real();
		}
		DebugLocation(77, 18);
		} finally { DebugExitRule(GrammarFileName, "num_real"); }
		return retval;

	}
	// $ANTLR end "num_real"

	partial void EnterRule_num();
	partial void LeaveRule_num();
	// $ANTLR start "num"
	// ArtGrammar.g:78:1: num : ( num_bin | num_oct | num_dec | num_hex | num_real );
	[GrammarRule("num")]
	private AstParserRuleReturnScope<object, IToken> num()
	{
		EnterRule_num();
		EnterRule("num", 6);
		TraceIn("num", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> num_bin6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> num_oct7 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> num_dec8 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> num_hex9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> num_real10 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "num");
		DebugLocation(78, 46);
		try
		{
			// ArtGrammar.g:78:5: ( num_bin | num_oct | num_dec | num_hex | num_real )
			int alt1=5;
			try { DebugEnterDecision(1, false);
			switch (input.LA(1))
			{
			case NUM_BIN:
				{
				alt1 = 1;
				}
				break;
			case NUM_OCT:
				{
				alt1 = 2;
				}
				break;
			case NUM_DEC:
				{
				alt1 = 3;
				}
				break;
			case NUM_HEX:
				{
				alt1 = 4;
				}
				break;
			case NUM_REAL:
				{
				alt1 = 5;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 1, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// ArtGrammar.g:78:7: num_bin
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 7);
				PushFollow(Follow._num_bin_in_num1413);
				num_bin6=num_bin();
				PopFollow();

				adaptor.AddChild(root_0, num_bin6.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ArtGrammar.g:78:15: num_oct
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 15);
				PushFollow(Follow._num_oct_in_num1415);
				num_oct7=num_oct();
				PopFollow();

				adaptor.AddChild(root_0, num_oct7.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// ArtGrammar.g:78:23: num_dec
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 23);
				PushFollow(Follow._num_dec_in_num1417);
				num_dec8=num_dec();
				PopFollow();

				adaptor.AddChild(root_0, num_dec8.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// ArtGrammar.g:78:31: num_hex
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 31);
				PushFollow(Follow._num_hex_in_num1419);
				num_hex9=num_hex();
				PopFollow();

				adaptor.AddChild(root_0, num_hex9.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// ArtGrammar.g:78:39: num_real
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 39);
				PushFollow(Follow._num_real_in_num1421);
				num_real10=num_real();
				PopFollow();

				adaptor.AddChild(root_0, num_real10.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("num", 6);
			LeaveRule("num", 6);
			LeaveRule_num();
		}
		DebugLocation(78, 46);
		} finally { DebugExitRule(GrammarFileName, "num"); }
		return retval;

	}
	// $ANTLR end "num"

	partial void EnterRule_identifier();
	partial void LeaveRule_identifier();
	// $ANTLR start "identifier"
	// ArtGrammar.g:80:1: identifier : IDENT ;
	[GrammarRule("identifier")]
	private AstParserRuleReturnScope<object, IToken> identifier()
	{
		EnterRule_identifier();
		EnterRule("identifier", 7);
		TraceIn("identifier", 7);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken IDENT11 = default(IToken);

		object IDENT11_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "identifier");
		DebugLocation(80, 12);
		try
		{
			// ArtGrammar.g:81:6: ( IDENT )
			DebugEnterAlt(1);
			// ArtGrammar.g:81:8: IDENT
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(81, 8);
			IDENT11=(IToken)Match(input,IDENT,Follow._IDENT_in_identifier1436); 
			IDENT11_tree = (object)adaptor.Create(IDENT11);
			adaptor.AddChild(root_0, IDENT11_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("identifier", 7);
			LeaveRule("identifier", 7);
			LeaveRule_identifier();
		}
		DebugLocation(81, 12);
		} finally { DebugExitRule(GrammarFileName, "identifier"); }
		return retval;

	}
	// $ANTLR end "identifier"

	partial void EnterRule_logical();
	partial void LeaveRule_logical();
	// $ANTLR start "logical"
	// ArtGrammar.g:82:1: logical : ( TRUE | FALSE );
	[GrammarRule("logical")]
	private AstParserRuleReturnScope<object, IToken> logical()
	{
		EnterRule_logical();
		EnterRule("logical", 8);
		TraceIn("logical", 8);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set12 = default(IToken);

		object set12_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "logical");
		DebugLocation(82, 20);
		try
		{
			// ArtGrammar.g:82:9: ( TRUE | FALSE )
			DebugEnterAlt(1);
			// ArtGrammar.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(82, 9);

			set12=(IToken)input.LT(1);
			if (input.LA(1)==FALSE||input.LA(1)==TRUE)
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set12));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("logical", 8);
			LeaveRule("logical", 8);
			LeaveRule_logical();
		}
		DebugLocation(82, 20);
		} finally { DebugExitRule(GrammarFileName, "logical"); }
		return retval;

	}
	// $ANTLR end "logical"

	partial void EnterRule_type();
	partial void LeaveRule_type();
	// $ANTLR start "type"
	// ArtGrammar.g:84:1: type : ( BOOLEAN | INTEGER | REAL );
	[GrammarRule("type")]
	private AstParserRuleReturnScope<object, IToken> type()
	{
		EnterRule_type();
		EnterRule("type", 9);
		TraceIn("type", 9);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set13 = default(IToken);

		object set13_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(84, 27);
		try
		{
			// ArtGrammar.g:84:6: ( BOOLEAN | INTEGER | REAL )
			DebugEnterAlt(1);
			// ArtGrammar.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(84, 6);

			set13=(IToken)input.LT(1);
			if (input.LA(1)==BOOLEAN||input.LA(1)==INTEGER||input.LA(1)==REAL)
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set13));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type", 9);
			LeaveRule("type", 9);
			LeaveRule_type();
		}
		DebugLocation(84, 27);
		} finally { DebugExitRule(GrammarFileName, "type"); }
		return retval;

	}
	// $ANTLR end "type"

	partial void EnterRule_expression();
	partial void LeaveRule_expression();
	// $ANTLR start "expression"
	// ArtGrammar.g:87:1: expression : operand ( ( EQUAL ^| NOT_EQUAL ^| LT ^| LE ^| GE ^| GT ^) operand )* ;
	[GrammarRule("expression")]
	private AstParserRuleReturnScope<object, IToken> expression()
	{
		EnterRule_expression();
		EnterRule("expression", 10);
		TraceIn("expression", 10);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EQUAL15 = default(IToken);
		IToken NOT_EQUAL16 = default(IToken);
		IToken LT17 = default(IToken);
		IToken LE18 = default(IToken);
		IToken GE19 = default(IToken);
		IToken GT20 = default(IToken);
		AstParserRuleReturnScope<object, IToken> operand14 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> operand21 = default(AstParserRuleReturnScope<object, IToken>);

		object EQUAL15_tree = default(object);
		object NOT_EQUAL16_tree = default(object);
		object LT17_tree = default(object);
		object LE18_tree = default(object);
		object GE19_tree = default(object);
		object GT20_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(87, 4);
		try
		{
			// ArtGrammar.g:88:5: ( operand ( ( EQUAL ^| NOT_EQUAL ^| LT ^| LE ^| GE ^| GT ^) operand )* )
			DebugEnterAlt(1);
			// ArtGrammar.g:88:7: operand ( ( EQUAL ^| NOT_EQUAL ^| LT ^| LE ^| GE ^| GT ^) operand )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(88, 7);
			PushFollow(Follow._operand_in_expression1470);
			operand14=operand();
			PopFollow();

			adaptor.AddChild(root_0, operand14.Tree);
			DebugLocation(88, 15);
			// ArtGrammar.g:88:15: ( ( EQUAL ^| NOT_EQUAL ^| LT ^| LE ^| GE ^| GT ^) operand )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_1 = input.LA(1);

				if ((LA3_1==EQUAL||(LA3_1>=GE && LA3_1<=GT)||LA3_1==LE||LA3_1==LT||LA3_1==NOT_EQUAL))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// ArtGrammar.g:88:16: ( EQUAL ^| NOT_EQUAL ^| LT ^| LE ^| GE ^| GT ^) operand
					{
					DebugLocation(88, 16);
					// ArtGrammar.g:88:16: ( EQUAL ^| NOT_EQUAL ^| LT ^| LE ^| GE ^| GT ^)
					int alt2=6;
					try { DebugEnterSubRule(2);
					try { DebugEnterDecision(2, false);
					switch (input.LA(1))
					{
					case EQUAL:
						{
						alt2 = 1;
						}
						break;
					case NOT_EQUAL:
						{
						alt2 = 2;
						}
						break;
					case LT:
						{
						alt2 = 3;
						}
						break;
					case LE:
						{
						alt2 = 4;
						}
						break;
					case GE:
						{
						alt2 = 5;
						}
						break;
					case GT:
						{
						alt2 = 6;
						}
						break;
					default:
						{
							NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}

					} finally { DebugExitDecision(2); }
					switch (alt2)
					{
					case 1:
						DebugEnterAlt(1);
						// ArtGrammar.g:88:17: EQUAL ^
						{
						DebugLocation(88, 22);
						EQUAL15=(IToken)Match(input,EQUAL,Follow._EQUAL_in_expression1474); 
						EQUAL15_tree = (object)adaptor.Create(EQUAL15);
						root_0 = (object)adaptor.BecomeRoot(EQUAL15_tree, root_0);
